# cubesat_robotic_arm

EmbeddedCode/iteration1/controller/: Cargo.toml
EmbeddedCode/iteration1/controller/.cargo/: config.toml
EmbeddedCode/iteration1/controller/src/: data_handler.rs  joystick_interface.rs  main.rs
EmbeddedCode/iteration1/motor_controller1/: Cargo.toml  README.md
EmbeddedCode/iteration1/motor_controller1/src/: main.rs
EmbeddedCode/iteration1/motor_controller1/src/motor_handler/: mod.rs  motor_interface.rs  motor_state.rs
EmbeddedCode/iteration1/robot-arm/: Cargo.toml
EmbeddedCode/iteration1/robot-arm/src/: arm_errors.rs  main.rs
EmbeddedCode/iteration1/robot-arm/src/hardware_interface/: arm_driver.rs  mod.rs
EmbeddedCode/iteration1/robot-arm/src/networking/: data_handler.rs  mod.rs  network_interface.rs
EmbeddedCode/iteration1/robot-arm/src/robotics/: arm_kinematics.rs  arm_state.rs  ef_state.rs  mod.rs  robot_driver.rs
EmbeddedCode/templates/arduino-template/: Cargo.toml
EmbeddedCode/templates/esp-template/: Cargo.toml
Kinematics/: ForwardKinematics.ipynb
Kinematics/inverse_robot_sim/: main.py  robot_arm.py
Kinematics/robot_sim/: main.py  robot_structure.py
