[package]
name = "motor-controller"
version = "0.1.0"
authors = ["willa"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "motor-controller"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.5.4"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
features = ["atmega328p"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "21342dcace7184f01fdc4e9703b01197bd4b4b4f"
features = ["arduino-uno", "atmega-hal"]


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
